Prevent js on mobile

--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,10 @@ section {
   .fa-chevron-down {
     opacity: 0;
   }
+
+  figure {
+    opacity: 1;
+  }
 }
 
 /* iPads (portrait and landscape) ———– */
